# skogul

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Containerfile  README.md  build_vercel.sh  main.py  mypy.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: lint.yml
scripts/: build_dev.sh  build_vercel.sh  onboard.sh  run.sh
skogul/skogul/: asgi.py  settings.py
src/: manage.py
src/skogul/: constants.py  settings.py  urls.py  wsgi.py
